@@ -1,3 +1,4 @@
+12/20/11 add evaporation control
 12/20/11 add "Remove Solute" button
 12/20/11 icons for shaker and dropper
 12/20/11 add drag constraints for shaker and dropper
